# mcp-app

./: CONTRIBUTING.md  FLEET.md  Makefile  OPERATIONS.md  README.md  pyproject.toml
docs/: app-development.md  custom-middleware.md
mcp_app/: __init__.py  admin.py  admin_client.py  admin_tools.py  app.py  bootstrap.py  bridge.py  cli.py  context.py  entry.py  health_check.py  middleware.py  run.py  storage_check.py  store.py  verifier.py
mcp_app/middleware/: __init__.py  bearer_proxy.py  common.py  credential_proxy.py  google_oauth2_proxy.py  jwt.py
mcp_app/testing/: fixtures.py
mcp_app/testing/health/: test_health.py
mcp_app/testing/iam/: test_admin_errors.py  test_admin_local.py  test_auth_enforcement.py
mcp_app/testing/wiring/: test_app_wiring.py
skills/author-mcp-app/: SKILL.md
skills/mcp-app-admin/: SKILL.md
tests/fixture_app/: pyproject.toml
tests/fixture_app/fixture_app/: __init__.py  app_multi_field_profile.py  app_with_profile.py
tests/framework/: conftest.py
tests/tck/: conftest.py  test_contracts.py
tests/unit/: test_admin.py  test_admin_client.py  test_admin_health.py  test_app.py  test_bootstrap.py  test_data_store.py  test_doc_charter.py  test_get_profile.py  test_health_check.py  test_middleware.py  test_probe_register.py  test_profile_flags.py  test_safe_tool.py  test_storage_check.py  test_tools_subcommand.py  test_update_profile.py  test_update_profile_cli.py
